@@ -1,0 +1,23 @@
+<?xml version="1.0"?>
+<!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.5//EN" "http://www.oasis-open.org/docbook/xml/4.5/docbookx.dtd">
+<article xmlns="http://docbook.org/ns/docbook">
+  <section ID="various_types_of_hyperlink_targets">
+    <title>Various types of hyperlink targets</title>
+    <section ID="id_1_target_inside_a_title">
+      <title>1.<anchor ID="target"/>Target inside a title</title>
+      <itemizedlist>
+        <listitem>
+          <para>
+            <link linked="target">target</link>
+          </para>
+        </listitem>
+        <listitem>
+          <para>
+            <link linked="multi-element_target">Multi-element target</link>
+          </para>
+        </listitem>
+      </itemizedlist>
+      <para>2. <anchor ID="multi-element_target"/>Multi-element target ---...--------------------</para>
+    </section>
+  </section>
+</article>
