@@ -1,0 +1,520 @@
+<?php
+
+return ezcDocumentRstDocumentNode::__set_state(array(
+   'depth' => 0,
+   'line' => 0,
+   'position' => 0,
+   'type' => 1,
+   'nodes' => 
+  array (
+    0 => 
+    ezcDocumentRstSectionNode::__set_state(array(
+       'title' => 
+      ezcDocumentRstTitleNode::__set_state(array(
+         'line' => 2,
+         'position' => 1,
+         'type' => 2,
+         'nodes' => 
+        array (
+          0 => 
+          ezcDocumentRstTextLineNode::__set_state(array(
+             'line' => 1,
+             'position' => 1,
+             'type' => 4,
+             'nodes' => 
+            array (
+            ),
+             'token' => 
+            ezcDocumentRstToken::__set_state(array(
+               'type' => 5,
+               'content' => 'Various types of hyperlink targets',
+               'line' => 1,
+               'position' => 1,
+               'escaped' => false,
+            )),
+             'identifier' => NULL,
+          )),
+          1 => 
+          ezcDocumentRstTextLineNode::__set_state(array(
+             'line' => 1,
+             'position' => 35,
+             'type' => 4,
+             'nodes' => 
+            array (
+            ),
+             'token' => 
+            ezcDocumentRstToken::__set_state(array(
+               'type' => 2,
+               'content' => '',
+               'line' => 1,
+               'position' => 35,
+               'escaped' => false,
+            )),
+             'identifier' => NULL,
+          )),
+        ),
+         'token' => 
+        ezcDocumentRstToken::__set_state(array(
+           'type' => 4,
+           'content' => '==================================',
+           'line' => 2,
+           'position' => 1,
+           'escaped' => false,
+        )),
+         'identifier' => NULL,
+      )),
+       'depth' => 1,
+       'reference' => NULL,
+       'line' => 2,
+       'position' => 1,
+       'type' => 1,
+       'nodes' => 
+      array (
+        0 => 
+        ezcDocumentRstSectionNode::__set_state(array(
+           'title' => 
+          ezcDocumentRstTitleNode::__set_state(array(
+             'line' => 5,
+             'position' => 1,
+             'type' => 2,
+             'nodes' => 
+            array (
+              0 => 
+              ezcDocumentRstTargetNode::__set_state(array(
+                 'line' => 4,
+                 'position' => 1,
+                 'type' => 4,
+                 'nodes' => 
+                array (
+                  0 => 
+                  ezcDocumentRstMarkupInterpretedTextNode::__set_state(array(
+                     'role' => false,
+                     'openTag' => false,
+                     'line' => 4,
+                     'position' => 9,
+                     'type' => 32,
+                     'nodes' => 
+                    array (
+                      0 => 
+                      ezcDocumentRstTextLineNode::__set_state(array(
+                         'line' => 4,
+                         'position' => 3,
+                         'type' => 4,
+                         'nodes' => 
+                        array (
+                        ),
+                         'token' => 
+                        ezcDocumentRstToken::__set_state(array(
+                           'type' => 5,
+                           'content' => 'Target',
+                           'line' => 4,
+                           'position' => 3,
+                           'escaped' => false,
+                        )),
+                         'identifier' => NULL,
+                      )),
+                    ),
+                     'token' => 
+                    ezcDocumentRstToken::__set_state(array(
+                       'type' => 4,
+                       'content' => '`',
+                       'line' => 4,
+                       'position' => 9,
+                       'escaped' => false,
+                    )),
+                     'identifier' => NULL,
+                  )),
+                ),
+                 'token' => 
+                ezcDocumentRstToken::__set_state(array(
+                   'type' => 4,
+                   'content' => '_',
+                   'line' => 4,
+                   'position' => 1,
+                   'escaped' => false,
+                )),
+                 'identifier' => NULL,
+              )),
+              1 => 
+              ezcDocumentRstTextLineNode::__set_state(array(
+                 'line' => 4,
+                 'position' => 10,
+                 'type' => 4,
+                 'nodes' => 
+                array (
+                ),
+                 'token' => 
+                ezcDocumentRstToken::__set_state(array(
+                   'type' => 1,
+                   'content' => ' ',
+                   'line' => 4,
+                   'position' => 10,
+                   'escaped' => false,
+                )),
+                 'identifier' => NULL,
+              )),
+              2 => 
+              ezcDocumentRstTextLineNode::__set_state(array(
+                 'line' => 4,
+                 'position' => 11,
+                 'type' => 4,
+                 'nodes' => 
+                array (
+                ),
+                 'token' => 
+                ezcDocumentRstToken::__set_state(array(
+                   'type' => 5,
+                   'content' => 'inside a title',
+                   'line' => 4,
+                   'position' => 11,
+                   'escaped' => false,
+                )),
+                 'identifier' => NULL,
+              )),
+              3 => 
+              ezcDocumentRstTextLineNode::__set_state(array(
+                 'line' => 4,
+                 'position' => 25,
+                 'type' => 4,
+                 'nodes' => 
+                array (
+                ),
+                 'token' => 
+                ezcDocumentRstToken::__set_state(array(
+                   'type' => 2,
+                   'content' => '',
+                   'line' => 4,
+                   'position' => 25,
+                   'escaped' => false,
+                )),
+                 'identifier' => NULL,
+              )),
+            ),
+             'token' => 
+            ezcDocumentRstToken::__set_state(array(
+               'type' => 4,
+               'content' => '------------------------',
+               'line' => 5,
+               'position' => 1,
+               'escaped' => false,
+            )),
+             'identifier' => NULL,
+          )),
+           'depth' => 2,
+           'reference' => NULL,
+           'line' => 5,
+           'position' => 1,
+           'type' => 1,
+           'nodes' => 
+          array (
+            0 => 
+            ezcDocumentRstBulletListNode::__set_state(array(
+               'indentation' => 2,
+               'line' => 7,
+               'position' => 1,
+               'type' => 20,
+               'nodes' => 
+              array (
+                0 => 
+                ezcDocumentRstParagraphNode::__set_state(array(
+                   'indentation' => 2,
+                   'line' => 7,
+                   'position' => 10,
+                   'type' => 3,
+                   'nodes' => 
+                  array (
+                    0 => 
+                    ezcDocumentRstExternalReferenceNode::__set_state(array(
+                       'target' => false,
+                       'line' => 7,
+                       'position' => 9,
+                       'type' => 41,
+                       'nodes' => 
+                      array (
+                        0 => 
+                        ezcDocumentRstTextLineNode::__set_state(array(
+                           'line' => 7,
+                           'position' => 3,
+                           'type' => 4,
+                           'nodes' => 
+                          array (
+                          ),
+                           'token' => 
+                          ezcDocumentRstToken::__set_state(array(
+                             'type' => 5,
+                             'content' => 'target',
+                             'line' => 7,
+                             'position' => 3,
+                             'escaped' => false,
+                          )),
+                           'identifier' => NULL,
+                        )),
+                      ),
+                       'token' => 
+                      ezcDocumentRstToken::__set_state(array(
+                         'type' => 4,
+                         'content' => '_',
+                         'line' => 7,
+                         'position' => 9,
+                         'escaped' => false,
+                      )),
+                       'identifier' => NULL,
+                    )),
+                  ),
+                   'token' => 
+                  ezcDocumentRstToken::__set_state(array(
+                     'type' => 2,
+                     'content' => '
+',
+                     'line' => 7,
+                     'position' => 10,
+                     'escaped' => false,
+                  )),
+                   'identifier' => NULL,
+                )),
+              ),
+               'token' => 
+              ezcDocumentRstToken::__set_state(array(
+                 'type' => 4,
+                 'content' => '-',
+                 'line' => 7,
+                 'position' => 1,
+                 'escaped' => false,
+              )),
+               'identifier' => NULL,
+            )),
+            1 => 
+            ezcDocumentRstBulletListNode::__set_state(array(
+               'indentation' => 2,
+               'line' => 8,
+               'position' => 1,
+               'type' => 20,
+               'nodes' => 
+              array (
+                0 => 
+                ezcDocumentRstParagraphNode::__set_state(array(
+                   'indentation' => 2,
+                   'line' => 8,
+                   'position' => 26,
+                   'type' => 3,
+                   'nodes' => 
+                  array (
+                    0 => 
+                    ezcDocumentRstExternalReferenceNode::__set_state(array(
+                       'target' => false,
+                       'line' => 8,
+                       'position' => 25,
+                       'type' => 41,
+                       'nodes' => 
+                      array (
+                        0 => 
+                        ezcDocumentRstMarkupInterpretedTextNode::__set_state(array(
+                           'role' => false,
+                           'openTag' => false,
+                           'line' => 8,
+                           'position' => 24,
+                           'type' => 32,
+                           'nodes' => 
+                          array (
+                            0 => 
+                            ezcDocumentRstTextLineNode::__set_state(array(
+                               'line' => 8,
+                               'position' => 4,
+                               'type' => 4,
+                               'nodes' => 
+                              array (
+                              ),
+                               'token' => 
+                              ezcDocumentRstToken::__set_state(array(
+                                 'type' => 5,
+                                 'content' => 'Multi-element target',
+                                 'line' => 8,
+                                 'position' => 4,
+                                 'escaped' => false,
+                              )),
+                               'identifier' => NULL,
+                            )),
+                          ),
+                           'token' => 
+                          ezcDocumentRstToken::__set_state(array(
+                             'type' => 4,
+                             'content' => '`',
+                             'line' => 8,
+                             'position' => 24,
+                             'escaped' => false,
+                          )),
+                           'identifier' => NULL,
+                        )),
+                      ),
+                       'token' => 
+                      ezcDocumentRstToken::__set_state(array(
+                         'type' => 4,
+                         'content' => '_',
+                         'line' => 8,
+                         'position' => 25,
+                         'escaped' => false,
+                      )),
+                       'identifier' => NULL,
+                    )),
+                  ),
+                   'token' => 
+                  ezcDocumentRstToken::__set_state(array(
+                     'type' => 2,
+                     'content' => '
+',
+                     'line' => 8,
+                     'position' => 26,
+                     'escaped' => false,
+                  )),
+                   'identifier' => NULL,
+                )),
+              ),
+               'token' => 
+              ezcDocumentRstToken::__set_state(array(
+                 'type' => 4,
+                 'content' => '-',
+                 'line' => 8,
+                 'position' => 1,
+                 'escaped' => false,
+              )),
+               'identifier' => NULL,
+            )),
+          ),
+           'token' => 
+          ezcDocumentRstToken::__set_state(array(
+             'type' => 4,
+             'content' => '------------------------',
+             'line' => 5,
+             'position' => 1,
+             'escaped' => false,
+          )),
+           'identifier' => NULL,
+        )),
+        1 => 
+        ezcDocumentRstSectionNode::__set_state(array(
+           'title' => 
+          ezcDocumentRstTitleNode::__set_state(array(
+             'line' => 11,
+             'position' => 1,
+             'type' => 2,
+             'nodes' => 
+            array (
+              0 => 
+              ezcDocumentRstTargetNode::__set_state(array(
+                 'line' => 10,
+                 'position' => 1,
+                 'type' => 4,
+                 'nodes' => 
+                array (
+                  0 => 
+                  ezcDocumentRstMarkupInterpretedTextNode::__set_state(array(
+                     'role' => false,
+                     'openTag' => false,
+                     'line' => 10,
+                     'position' => 23,
+                     'type' => 32,
+                     'nodes' => 
+                    array (
+                      0 => 
+                      ezcDocumentRstTextLineNode::__set_state(array(
+                         'line' => 10,
+                         'position' => 3,
+                         'type' => 4,
+                         'nodes' => 
+                        array (
+                        ),
+                         'token' => 
+                        ezcDocumentRstToken::__set_state(array(
+                           'type' => 5,
+                           'content' => 'Multi-element target',
+                           'line' => 10,
+                           'position' => 3,
+                           'escaped' => false,
+                        )),
+                         'identifier' => NULL,
+                      )),
+                    ),
+                     'token' => 
+                    ezcDocumentRstToken::__set_state(array(
+                       'type' => 4,
+                       'content' => '`',
+                       'line' => 10,
+                       'position' => 23,
+                       'escaped' => false,
+                    )),
+                     'identifier' => NULL,
+                  )),
+                ),
+                 'token' => 
+                ezcDocumentRstToken::__set_state(array(
+                   'type' => 4,
+                   'content' => '_',
+                   'line' => 10,
+                   'position' => 1,
+                   'escaped' => false,
+                )),
+                 'identifier' => NULL,
+              )),
+              1 => 
+              ezcDocumentRstTextLineNode::__set_state(array(
+                 'line' => 10,
+                 'position' => 24,
+                 'type' => 4,
+                 'nodes' => 
+                array (
+                ),
+                 'token' => 
+                ezcDocumentRstToken::__set_state(array(
+                   'type' => 2,
+                   'content' => '',
+                   'line' => 10,
+                   'position' => 24,
+                   'escaped' => false,
+                )),
+                 'identifier' => NULL,
+              )),
+            ),
+             'token' => 
+            ezcDocumentRstToken::__set_state(array(
+               'type' => 4,
+               'content' => '-----------------------',
+               'line' => 11,
+               'position' => 1,
+               'escaped' => false,
+            )),
+             'identifier' => NULL,
+          )),
+           'depth' => 2,
+           'reference' => NULL,
+           'line' => 11,
+           'position' => 1,
+           'type' => 1,
+           'nodes' => 
+          array (
+          ),
+           'token' => 
+          ezcDocumentRstToken::__set_state(array(
+             'type' => 4,
+             'content' => '-----------------------',
+             'line' => 11,
+             'position' => 1,
+             'escaped' => false,
+          )),
+           'identifier' => NULL,
+        )),
+      ),
+       'token' => 
+      ezcDocumentRstToken::__set_state(array(
+         'type' => 4,
+         'content' => '==================================',
+         'line' => 2,
+         'position' => 1,
+         'escaped' => false,
+      )),
+       'identifier' => NULL,
+    )),
+  ),
+   'token' => NULL,
+   'identifier' => NULL,
+));
+
